# typemill

./: .gitignore  .gitmodules  .jscpdrc.json  .knipignore  .mcp.json  00_PROPOSAL_LANGUAGE_PLUGIN_REFACTOR.md  00_PROPOSAL_LANG_JAVA.md  00_PROPOSAL_TREE.md  00_refactor.proposal.md  00_validation_testing.md  01_MERGE_REMOTES_PROPOSAL.md  01_PROPOSAL_LANG_CRATE.md  01a_unified_refactoring_api.md  01b_unified_analysis_api.proposal.md  01c1_actionable_suggestions_core.proposal.md  01c3_actionable_suggestions_system.proposal.md  01c_actionable_suggestions.proposal.md  02_PROPOSAL_DEDUPLICATE.md  02_legacy_retirement.proposal.md  03_DEVELOPER_EXPERIENCE_PROCESS.md  03a_advanced_dead_code.proposal.md  04_PROPOSAL_SUPPORT_MATRIX.md  04_rename_to_typemill.proposal.md  05_fix_search_symbols.proposal.md  06_PROPOSAL_MCP_API_CLEANUP.md  06_workspace_level_analysis.proposal.md  07_SELF_REFACTOR_EXECUTION_PLAN.md  10_PROPOSAL_REFACTORING_FOCUS.md  10_TREE_PROPOSAL.md  11_LANGUAGE_EXPANSION_PROPOSAL.md  15_PROPOSAL_COMPLETE_BEGINNER_PATH.md  16_PROPOSAL_QUICK_START_DEVELOPER_PATH.md  17_PROPOSAL_CI_CD_AUTOMATED_PATH.md  20_BACKEND_MULTITENANCY_PROPOSAL.md  20_PLUGIN_SELF_REGISTRATION_PROPOSAL.md  30_PROPOSAL_CODE_QUALITY.md  30_PROPOSAL_UNIFIED_REFACTORING_API.md  35_IMPLEMENTATION_SEQUENCING.md  40_PROPOSAL_UNIFIED_ANALYSIS_API.md  41_PROPOSAL_LEGACY_HANDLER_RETIREMENT.md  (+161 more)
analysis/cb-analysis-dead-code/: Cargo.toml
analysis/cb-analysis-dead-code/src/: config.rs  detector.rs  lib.rs  types.rs  utils.rs
analysis/cb-analysis-dead-code/tests/: unit_tests.rs
analysis/mill-analysis-dead-code/: Cargo.toml
analysis/mill-analysis-dead-code/src/: collect.rs  detector.rs  graph.rs  lib.rs  reachability.rs  references.rs  types.rs  utils.rs
analysis/mill-analysis-dead-code/src/ast/: mod.rs  rust.rs
analysis/mill-analysis-dead-code/tests/: unit_tests.rs
analysis/mill-analysis-deep-dead-code/: Cargo.toml
analysis/mill-analysis-deep-dead-code/src/: graph_builder.rs  lib.rs
analysis/mill-analysis-deep-dead-code/src/ast_parser/: mod.rs  typescript.rs
analysis/mill-analysis-deep-dead-code/tests/: deep_dead_code_test.rs
crates/cb-services/: Cargo.toml  build.rs
crates/cb-services/src/: lib.rs
crates/cb-services/src/services/: app_state_factory.rs  ast_service.rs  dry_run_generator.rs  file_service.rs  import_service.rs  mod.rs  operation_queue.rs  plan_converter.rs  planner.rs  reference_updater.rs  registry_builder.rs  workflow_executor.rs
crates/codebuddy-core/: Cargo.toml
crates/codebuddy-core/src/: lib.rs
crates/codebuddy-core/tests/: acceptance_config.rs  model_tests.rs  multitenancy_tests.rs  rename_scope_test.rs
crates/languages/cb-lang-python/: Cargo.toml  README.md
crates/languages/cb-lang-python/src/: import_support.rs  lib.rs  manifest.rs  refactoring.rs  workspace_support.rs
crates/languages/cb-lang-typescript/: Cargo.toml
crates/languages/cb-lang-typescript/resources/: ast_tool.js
crates/languages/cb-lang-typescript/src/: import_support.rs  lib.rs  manifest.rs  parser.rs  refactoring.rs
crates/mill-auth/: Cargo.toml
crates/mill-auth/src/: jwt.rs
crates/mill-lang-c/: Cargo.toml
crates/mill-lang-c/src/: lib.rs
crates/mill-lang-c/tests/: integration_test.rs
crates/mill-lang-go/: Cargo.toml  build.rs
crates/mill-lang-go/src/: import_support.rs  lib.rs  project_factory.rs  workspace_support.rs
crates/mill-lang-php/: Cargo.toml
crates/mill-lang-php/src/: lib.rs  parser.rs
crates/mill-lang-php/tests/: integration_test.rs
crates/mill-lang-svelte/: Cargo.toml
crates/mill-lang-svelte/src/: import_support.rs  lib.rs  script_blocks.rs
crates/mill-plugin-bundle/: Cargo.toml
crates/mill-plugin-bundle/src/: lib.rs
crates/mill-services/: Cargo.toml
crates/mill-services/src/: error.rs  lib.rs
crates/mill-services/src/services/: app_state_factory.rs  ast_service.rs  checksum_validator.rs  dry_run_generator.rs  import_service.rs  mod.rs  operation_queue.rs  plan_converter.rs  planner.rs  post_apply_validator.rs  registry_builder.rs  tests.rs  workflow_executor.rs
crates/mill-transport/: Cargo.toml
crates/mill-transport/src/: admin.rs  lib.rs  stdio.rs  unix_socket.rs  ws.rs
crates/mill-transport/tests/: admin_security.rs
languages-extra/: Cargo.toml  README.md
languages-extra/mill-lang-c/src/: constants.rs  lsp_installer.rs  project_factory.rs  refactoring.rs
languages-extra/mill-lang-c/src/tests/: project_factory_test.rs
languages-extra/mill-lang-c/tests/: manifest_integration_test.rs
languages-extra/mill-lang-cpp/: Cargo.toml
languages-extra/mill-lang-cpp/src/: analysis.rs  ast_parser.rs  constants.rs  import_support.rs  lsp_installer.rs  project_factory.rs  workspace_support.rs
languages-extra/mill-lang-cpp/tests/: main_test.rs
languages-extra/mill-lang-csharp/src/: import_support.rs  project_factory.rs  workspace_support.rs
languages-extra/mill-lang-go/src/: constants.rs  lsp_installer.rs  project_factory.rs
languages-extra/mill-lang-java/: build.rs
languages-extra/mill-lang-swift/src/: import_support.rs  lsp_installer.rs  workspace_support.rs
rust/apps/server/: Cargo.toml
rust/apps/server/src/: cli.rs  main.rs
rust/crates/cb-ast/: Cargo.toml  README.md
rust/crates/cb-ast/src/: analyzer.rs  cache.rs  error.rs  import_updater.rs  lib.rs  package_extractor.rs  parser.rs  python_parser.rs  python_refactoring_test.rs  refactoring.rs  rust_parser.rs  transformer.rs
rust/crates/cb-client/: Cargo.toml
rust/crates/cb-client/src/: client_config.rs  config.rs  error.rs  formatting.rs  interactive.rs  lib.rs  main.rs  websocket.rs
rust/crates/cb-server/: Cargo.toml
rust/crates/cb-server/src/: error.rs  interfaces.rs  lib.rs  main.rs  mcp_tools.rs
rust/crates/cb-server/tests/: phase2_integration.rs  phase3_integration.rs
rust/crates/tests/: Cargo.toml
rust/crates/tests/src/: contract_tests.rs  dry_run_integration.rs  helpers.rs  lib.rs  mocks.rs  resilience_tests.rs
rust/crates/tests/tests/: cli_tool_command.rs  contract_validation.rs  e2e_advanced_features.rs  e2e_error_scenarios.rs  e2e_flow.rs  (+13 more)
(+1715 files in other folders)
