# Language Plugins - Extra
#
# Optional language plugins for TypeMill.
# These can be split into a separate repository via:
#   git subtree split --prefix=languages-extra -b typemill-langs-extra
#
# Core languages (rust, typescript, python) remain in the main repo.

[workspace]
members = [
    "mill-lang-c",
    "mill-lang-cpp",
    "mill-lang-csharp",
    "mill-lang-go",
    "mill-lang-java",
    "mill-lang-swift",
]
resolver = "2"

# Note: This workspace manifest is for future standalone use.
# Currently, these crates are built as part of the main TypeMill workspace.
