[package]
name = "mill-analysis-dead-code"
version = "2.0.0"
edition = "2021"
license.workspace = true
description = "Dead code analysis using LSP + call graph reachability"

[dependencies]
# Internal
mill-analysis-common = { path = "../mill-analysis-common" }

# Async
async-trait = "0.1"
tokio = { version = "1.0", features = ["sync", "time"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Graph algorithms
petgraph = "0.6"

# Utilities
thiserror = "2.0"
tracing = "0.1"
walkdir = "2"

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tempfile = "3.8"
