[package]
name = "codebuddy-core"
edition = "2021"
description = "Core types, configuration, and error handling for Codeflow Buddy"
license = "MIT"

[dependencies]
codebuddy-foundation = { path = "../codebuddy-foundation" }
cb-plugin-api = { path = "../cb-plugin-api" }
codebuddy-config = { path = "../codebuddy-config" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = "1.0"
sha2 = "0.10"
glob = "0.3"

[features]
default = []
mcp-proxy = []

[dev-dependencies]
tempfile = "3.8"
serial_test = "3.2"
tokio = { workspace = true }
