[package]
name = "mill-auth"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Authentication and JWT utilities for TypeMill"

[dependencies]
mill-foundation = { path = "../mill-foundation" }
jsonwebtoken = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
