[package]
name = "mill-lang-go"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[build-dependencies]
cc = "1.0"
tree-sitter = "0.22.6"

[dependencies]
# Core plugin API
mill-plugin-api = { path = "../mill-plugin-api" }
mill-foundation = { path = "../mill-foundation" }
mill-lang-common = { path = "../mill-lang-common" }

# Tree-sitter for parsing
tree-sitter-go = "0.21.0"

# Async operations
async-trait = { workspace = true }
tokio = { workspace = true }

# Serialization/Deserialization & Other Utilities
serde = { workspace = true }
serde_json = { workspace = true }
regex = "1.10"
pathdiff = "0.2"

# Error handling
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

chrono = { workspace = true, features = ["serde"] }

[dev-dependencies]
tempfile = { workspace = true }