[package]
name = "mill-lang-php"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
mill-plugin-api = { path = "../mill-plugin-api" }
mill-lang-common = { path = "../mill-lang-common" }
mill-foundation = { path = "../mill-foundation" }

async-trait = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

# TODO: Add language-specific parser dependencies

[dev-dependencies]
tokio-test = "0.4"
