[package]
name = "mill-lang-php"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
# Core plugin API
mill-plugin-api = { path = "../mill-plugin-api" }
mill-foundation = { path = "../mill-foundation" }
mill-lang-common = { path = "../mill-lang-common" }

# Async operations
async-trait = { workspace = true }
tokio = { workspace = true }

# Serialization/Deserialization & Other Utilities
serde = { workspace = true }
serde_json = { workspace = true }
toml = "0.9"
regex = "1.10"
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# Tree-sitter for parsing
tree-sitter = "0.20.10"
tree-sitter-php = { path = "tree-sitter-php" }


[build-dependencies]
cc = "1.0"

[dev-dependencies]
tempfile = { workspace = true }