[package]
name = "mill-plugin-bundle"
version = "0.1.0"
edition = "2021"
license.workspace = true
description = "Plugin bundle containing all language plugins for mill"

[dependencies]
# Core plugin API
mill-plugin-api = { path = "../mill-plugin-api" }
mill-lang-typescript = { path = "../../crates/mill-lang-typescript", optional = true, default-features = false }

# Logging
tracing = { workspace = true }
mill-lang-rust = { path = "../../crates/mill-lang-rust", optional = true, default-features = false }
mill-lang-python = { path = "../../crates/mill-lang-python", optional = true, default-features = false }
mill-lang-gitignore = { path = "../../crates/mill-lang-gitignore", optional = true, default-features = false }
mill-lang-markdown = { path = "../../crates/mill-lang-markdown", optional = true, default-features = false }
mill-lang-toml = { path = "../../crates/mill-lang-toml", optional = true, default-features = false }
mill-lang-yaml = { path = "../../crates/mill-lang-yaml", optional = true, default-features = false }

[features]
default = ["lang-gitignore", "lang-markdown", "lang-python", "lang-rust", "lang-toml", "lang-typescript", "lang-yaml"]
lang-rust = ["dep:mill-lang-rust"]
lang-typescript = ["dep:mill-lang-typescript"]
lang-markdown = ["dep:mill-lang-markdown"]
lang-toml = ["dep:mill-lang-toml"]
lang-yaml = ["dep:mill-lang-yaml"]
lang-python = ["dep:mill-lang-python"]
lang-gitignore = ["dep:mill-lang-gitignore"]
