[package]
name = "mill-services"
edition = "2021"
license.workspace = true

[dependencies]
mill-foundation = { path = "../mill-foundation" }
mill-lsp = { path = "../mill-lsp" }
mill-plugin-api = { path = "../mill-plugin-api" }
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
dashmap = { workspace = true }
uuid = { workspace = true }
lsp-types = "0.97"
tempfile = "3.0"
ignore = "0.4"
globset = "0.4"
toml_edit = "0.23"
pathdiff = "0.2"
chrono = "0.4"
sha2 = "0.10"
urlencoding = "2.1"
mill-plugin-system = { path = "../mill-plugin-system", default-features = false, features = ["runtime"] }
mill-config = { path = "../mill-config" }
mill-ast = { path = "../mill-ast", default-features = false }

[features]
default = []
mcp-proxy = ["mill-foundation/mcp-proxy", "mill-config/mcp-proxy", "mill-plugin-system/mcp-proxy"]

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
futures-util = "0.3"
chrono = "0.4"
tokio = { workspace = true }
# Add plugin bundle for integration testing
mill-plugin-bundle = { path = "../mill-plugin-bundle", default-features = true }
