[package]
name = "mill-transport"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Transport layer for WebSocket and stdio communication"

[dependencies]
codebuddy-foundation = { path = "../codebuddy-foundation" }
mill-auth = { path = "../mill-auth" }
mill-config = { path = "../mill-config" }
mill-workspaces = { path = "../mill-workspaces" }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
futures-util = "0.3"
tokio-tungstenite = "0.28"
jsonwebtoken = { workspace = true }
url = "2"
uuid = { workspace = true }
axum = "0.8"
tower = "0.5.2"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
mill-ast = { path = "../mill-ast", default-features = false }

[features]
default = ["lang-rust", "lang-typescript", "lang-markdown"]
lang-rust = ["mill-ast/lang-rust"]
lang-typescript = ["mill-ast/lang-typescript"]
lang-markdown = ["mill-ast/lang-markdown"]
mcp-proxy = ["codebuddy-foundation/mcp-proxy", "mill-config/mcp-proxy"]
