[package]
name = "codeflow-buddy"
version = "0.1.0"
edition = "2021"
description = "Pure Rust MCP server bridging Language Server Protocol (LSP) functionality to AI coding assistants"
license = "MIT"
repository = "https://github.com/username/codeflow-buddy"
homepage = "https://github.com/username/codeflow-buddy"
keywords = ["mcp", "lsp", "ai", "coding", "assistant"]
categories = ["development-tools", "command-line-utilities"]

[dependencies]
cb-server = { path = "../../crates/cb-server" }
cb-core = { path = "../../crates/cb-core" }

tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"

serde = "1.0"
serde_json = "1.0"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }