[package]
name = "cb-client"
version = "0.1.0"
edition = "2021"
description = "Codeflow Buddy client implementation"
license = "MIT"

[dependencies]
cb-core = { path = "../cb-core" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { version = "4.0", features = ["derive"] }