[package]
name = "cb-server"
version = "0.1.0"
edition = "2021"
description = "Codeflow Buddy server implementation"
license = "MIT"

[dependencies]
cb-core = { path = "../cb-core" }
cb-ast = { path = "../cb-ast" }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }